gtk: Workaround for WebKitGTK+ bug #150303

See https://bugs.webkit.org/show_bug.cgi?id=150303